update files v2 by vcode

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-FAL_KEY=982e1d92-6cd2-4be7-9390-3ba601982bb4:8c2311ffff7adc375bbbd7686fd99498
+FAL_KEY_ID=a0074f21-919e-4539-8eef-53cbe67c477e
+FAL_KEY_SECRET=dad6b9be7933f17e8101353957ef0bc5
 PORT=5000
 REACT_APP_FIREBASE_API_KEY=AIzaSyCUivsiXcVS9r5tNN3ntGaYzg5Yclddffs
 REACT_APP_FIREBASE_AUTH_DOMAIN=ai-chat-platform-4d73d.firebaseapp.com
