--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
-    "axios": "^1.3.4",
+    "@fal-ai/client": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "axios": "^1.3.4"
   }
 }
